# A2UI

./: LICENSE  README.md
a2ui-demo/samples/agent/adk/: pyproject.toml
a2ui-demo/samples/agent/adk/restaurant_finder/: __main__.py  agent.py  agent_executor.py  restaurant_data.json  tools.py
a2ui-demo/samples/agent/adk/simple_chat/: .env.example  HOW_IT_WORKS.md  README.md  __init__.py  __main__.py  agent.py  agent_executor.py  pyproject.toml
a2ui-demo/samples/agent/chainlit/: .env.example  README.md  app.py  chainlit.md  pyproject.toml
a2ui-demo/samples/client/lit/: package.json
a2ui-demo/samples/client/lit/shell/: app.ts  client.ts  vite.config.ts
a2ui-demo/samples/client/lit/shell/configs/: chat.ts
a2ui-demo/specification/v0_10/json/: server_to_client.json  standard_catalog.json
a2ui-demo/specification/v0_9/json/: standard_catalog.json
